--- a/src/output.css
+++ b/src/output.css
@@ -739,6 +739,22 @@ video {
   height: 100%;
 }
 
+.\!h-9 {
+  height: 2.25rem !important;
+}
+
+.\!h-8 {
+  height: 2rem !important;
+}
+
+.min-h-8 {
+  min-height: 2rem;
+}
+
+.min-h-9 {
+  min-height: 2.25rem;
+}
+
 .w-10 {
   width: 2.5rem;
 }
@@ -767,12 +783,36 @@ video {
   width: 1.25rem;
 }
 
+.w-9 {
+  width: 2.25rem;
+}
+
 .w-full {
   width: 100%;
 }
 
+.\!w-9 {
+  width: 2.25rem !important;
+}
+
+.w-8 {
+  width: 2rem;
+}
+
+.\!w-8 {
+  width: 2rem !important;
+}
+
 .min-w-0 {
   min-width: 0px;
+}
+
+.min-w-8 {
+  min-width: 2rem;
+}
+
+.min-w-9 {
+  min-width: 2.25rem;
 }
 
 .max-w-2xl {
@@ -1403,6 +1443,10 @@ video {
 
   .sm\:flex {
     display: flex;
+  }
+
+  .sm\:h-9 {
+    height: 2.25rem;
   }
 
   .sm\:max-w-xl {
