conectado correctamente a base de datos

--- a/views/singUp.ejs
+++ b/views/singUp.ejs
@@ -9,11 +9,13 @@
     <link href="../output.css" rel="stylesheet" />
     <!--Srip de flowbite para que sirva la barra nav con menu desplegable-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.5/flowbite.min.js"></script>
+    <script src="https://cdn.tailwindcss.com"></script>
 
     <!--internos-->
-    <link rel="stylesheet" href="/src/css/fondoPagina.css" />
-    <link rel="stylesheet" href="/src/css/signUp.css">
-    <link rel="icon" href="/src/assets/img/pageIcon.svg" />
+
+    <link rel="stylesheet" href="/css/fondoPagina.css" />
+    <link rel="stylesheet" href="/css/signUp.css">
+    <link rel="icon" href="/assets/img/pageIcon.svg" />
     <title>Sign Up</title>
 </head>
 
@@ -22,7 +24,7 @@
     <nav class="sticky top-0 z-50 bg-white border-gray-200  dark:border-gray-700 nav-animated-bg">
         <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
             <a href="/index.html" class="flex items-center space-x-3 rtl:space-x-reverse">
-                <img src="/src/assets/img/logoBarra.svg" class="h-8" alt="Billie Eilish Logo" />
+                <img src="/assets/img/logoBarra.svg" class="h-8" alt="Billie Eilish Logo" />
                 <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">Eilish Vibes</span>
             </a>
             <button data-collapse-toggle="navbar-dropdown" type="button"
@@ -64,39 +66,39 @@
                             <ul class="py-2 text-sm text-gray-700 dark:text-gray-400"
                                 aria-labelledby="dropdownLargeButton">
                                 <li>
-                                    <a href="/src/pages/store.html#normalVinyl"
+                                    <a href="/pages/store.html#normalVinyl"
                                         class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Normal
                                         Vinyl</a>
                                 </li>
                                 <li>
-                                    <a href="/src/pages/store.html#limitedEditionVinyl"
+                                    <a href="/pages/store.html#limitedEditionVinyl"
                                         class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Limited
                                         Edition Vinyl</a>
                                 </li>
                                 <li>
-                                    <a href="/src/pages/store.html#misteryBoxs"
+                                    <a href="/pages/store.html#misteryBoxs"
                                         class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Mistery
                                         Boxs(Only Holidays)</a>
                                 </li>
                                 <li>
-                                    <a href="/src/pages/store.html#hoddies"
+                                    <a href="/pages/store.html#hoddies"
                                         class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Hoodies</a>
                                 </li>
                                 <li>
-                                    <a href="/src/pages/store.html#oversideTshirst"
+                                    <a href="/pages/store.html#oversideTshirst"
                                         class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Overside
                                         T-shirts</a>
                                 </li>
                                 <li>
-                                    <a href="/src/pages/store.html#necklaces"
+                                    <a href="/pages/store.html#necklaces"
                                         class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Necklaces</a>
                                 </li>
                                 <li>
-                                    <a href="/src/pages/store.html#shoes"
+                                    <a href="/pages/store.html#shoes"
                                         class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Shoes</a>
                                 </li>
                                 <li>
-                                    <a href="/src/pages/store.html#signedThings"
+                                    <a href="/pages/store.html#signedThings"
                                         class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Signed
                                         Things</a>
                                 </li>
@@ -104,15 +106,15 @@
                         </div>
                     </li>
                     <li>
-                        <a href="/src/pages/postNews.html"
+                        <a href="/pages/postNews.html"
                             class="block py-2 px-3 text-white rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">News</a>
                     </li>
                     <li>
-                        <a href="/src/pages/tour.html"
+                        <a href="/pages/tour.html"
                             class="block py-2 px-3 text-white rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Tour</a>
                     </li>
                     <li>
-                        <a href="/src/pages/aboutUs.html"
+                        <a href="/pages/aboutUs.html"
                             class="block py-2 px-3 text-white rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">About
                             Us</a>
                     </li>
@@ -141,7 +143,7 @@
                 </a>
                 <button id="botonSesion">
                     <img class="h-9 w-9 min-h-9 min-w-9 p-1 hover:bg-blue-500 duration-200" aria-hidden="true"
-                        src="/src/assets/img/accountIcon.svg" alt="logo de cuenta">
+                        src="/assets/img/accountIcon.svg" alt="logo de cuenta">
                 </button>
 
             </div>
@@ -222,7 +224,7 @@
             <div class="md:flex md:justify-between">
                 <div class="mb-6 md:mb-0">
                     <a href="/index.html" class="flex items-center">
-                        <img src="/src/assets/img/logoBarra.svg" class="h-8 me-3" alt="Billie Logo" />
+                        <img src="/assets/img/logoBarra.svg" class="h-8 me-3" alt="Billie Logo" />
                         <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">Eilish
                             Vibes</span>
                     </a>
@@ -316,7 +318,7 @@
             </div>
         </div>
     </footer>
-    <script src="/src/js/navBar.js"></script>
+    <script src="/js/navBar.js"></script>
 </body>
 
 </html>
